--- a/metro_uzbekistan.css
+++ b/metro_uzbekistan.css
@@ -18,11 +18,32 @@ body {
 }
 /* Centered text */
 .centered {
-		font-weight:bold;
-		color: white;
-		font-size: 5vw;
+	font-weight:bold;
+	color: white;
+	font-size: 5vw;
     position: absolute;
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
+/*========================
+===LA PARTE DE LA MAGIA ==
+=========================*/
+
+.parada {
+    list-style: none;
+    width: 20px !important;
+    height: 20px !important;
+    background-color: #55ac44;
+    border-radius: 10px;
+}
+.camino {
+    list-style: none;
+    width: 10px !important;
+    height: 60px !important;
+    background-color: #55ac44;
+    margin-top: -10px;
+    margin-bottom:-10px;
+    margin-left: 5px;
+}
+
