cuadrando cosas en 800x600

--- a/metro_uzbekistan.css
+++ b/metro_uzbekistan.css
@@ -6,9 +6,6 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #222;
 }
-#content{
-	margin-left: 10px;
-}
 
 #results-container{
 	min-height: 72vh;
@@ -489,4 +486,14 @@ body {
 	-ms-transition: all .3s;
 	-o-transition: all .3s;
 	transition: all .3s;
+}
+
+.scaled {
+	transform: perspective(500px) scale3d(.5, .5, 1) translateZ(100px);
+}
+
+.pos-ab {
+	position:absolute;
+	top: -80px;
+	left:-180px;
 }
